# mdbus

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  RELEASE-TODO  THANKS  TODO  configure.ac
fsoaudiod/: AUTHORS  ChangeLog  Makefile.am  Makefile.decl  README  TODO  configure.ac
fsoaudiod/conf/: Makefile.am  asound.conf
fsoaudiod/data/: Makefile.am  fsoaudiod.conf  fsoaudiod.service  org.freesmartphone.oaudiod.service.in
fsoaudiod/src/: Makefile.am
fsoaudiod/vapi/: Makefile.am  alsa-ext.vapi  alsaext.vapi  config.vapi  libcmtspeechdata.h  libcmtspeechdata.vapi
fsodatad/: ChangeLog  Makefile.am  README  configure.ac  fsodata-2.0.pc.in
fsodatad/data/: Makefile.am  fsodatad.conf  iso3361+dialcode.txt  iso3361+tz.txt  org.freesmartphone.odatad.service.in  timezones.txt
fsodatad/tests/: Makefile.am  testworld.vala
fsodatad/vapi/: config.vapi
fsodeviced/: ChangeLog  Makefile.am  README  configure.ac
fsodeviced/conf/: Makefile.am
fsodeviced/data/: Makefile.am  fsodeviced.conf  fsodeviced.service  org.freesmartphone.odeviced.service.in
fsodeviced/src/: Makefile.am
fsodeviced/tests/: .gitignore  Makefile.am  testlogger.vala  testsmartkeyfile.vala  testsoundsystem.vala
fsodeviced/vapi/: Makefile.am  config.vapi  i2c.vapi  rfkill.vapi  uinput.vapi
fsogsmd/: ChangeLog  Makefile.am  NEWS  README  configure.ac
fsogsmd/conf/: Makefile.am
fsogsmd/data/: Makefile.am  fsogsmd.conf  list-en1-semic-3.txt  mergecountryinfo.py  org.freesmartphone.ogsmd.service.in
fsogsmd/src/: Makefile.am
fsogsmd/tests/: .gitignore  Makefile.am  README  fsogsmd.conf  integration-tests.vala  phonesim-default.xml  smsdata.vala  test3rdparty.vala  testatcommand.vala  testatcommandsequence.vala  testatparser.vala  testatresultiter.vala  testatresultparser.vala  testcb.vala  testcommandqueue.vala  testconst.vala  testconversions.vala  testoptiongtm601.vala  testparser.vala  testsmartkeyfile.vala  testsms.vala  testsmsstorage.vala
fsogsmd/vapi/: Makefile.am  config.vapi  connman.vapi  posix-ext.vapi  ppp.vapi  thread.vapi
fsomusicd/: .gitignore  AUTHORS  Makefile.am  README  configure  configure.ac
fsomusicd/conf/: Makefile.am
fsomusicd/data/: Makefile.am  fsomusicd.conf  org.freesmartphone.omusicd.service.in
fsomusicd/src/: Makefile.am  config.vala  interfaces.vala  main.vala  musicplayer.vala  playlist.vala
fsonetworkd/: ChangeLog  Makefile.am  README  configure.ac
fsonetworkd/data/: Makefile.am  fsonetworkd.conf  org.freesmartphone.onetworkd.service.in
fsonetworkd/src/: Makefile.am
fsosystemd/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
fsosystemd/data/: Makefile.am  fsosystemd.service
fsosystemd/src/: Makefile.am
fsotdld/: ChangeLog  Makefile.am  configure.ac
fsotdld/conf/: Makefile.am
fsotdld/data/: Makefile.am  fsotdld.conf  fsotdld.service  org.freesmartphone.otdld.service.in
fsotdld/tests/: .gitignore  Makefile.am  testsourcentp.vala
fsotdld/vapi/: Makefile.am  gio-hacks.vapi
fsotest/: Makefile.am  NEWS  README  configure.ac
fsotest/api/: Makefile.am  testgsm.vala  testusage.vala
fsotest/data/: Makefile.am  fsotest.conf
fsotest/fsosystem/: Makefile.am  testmodules.vala
fsotest/src/: Makefile.am  fixture.vala  main.vala  signalwatcher.vala  testgsm.vala  testmanager.vala  testresult.vala  testusage.vala  testutils.vala  wait.vala
fsotest/system/: Makefile.am  testmodules.vala  testpath.vala
fsotest/tests/: Makefile.am  testgsm.vala  testusage.vala
fsotest/vapi/: Makefile.am  phonesim.vapi
fsousaged/: ChangeLog  Makefile.am  Makefile.decl  NEWS  README  TODO  configure.ac
fsousaged/conf/: Makefile.am
fsousaged/data/: Makefile.am  fsousaged.conf  org.freesmartphone.ousaged.service.in
fsousaged/tests/: Makefile.am
fsousaged/vapi/: config.vapi
libfsobasics/: ChangeLog  MAINTAINERS  Makefile.am  README  configure.ac  fsobasics-2.0.pc.in
libfsobasics/fsobasics/: Makefile.am  async.vala  asyncworker.vala  binary.vala  checksum.vala  filehandling.vala  fsobasics-2.0.deps  fsobasics-2.0.vapi  gcc_libinitexit.c  inotifier.vala  kernel.vala  kobjectnotifier.vala  libinitexit.vala  logger.vala  netlinknotifier.vala  netlinkutils.vala  overlay.vala  process.vala  smartkeyfile.vala  stringhandling.vala  syncasync.vala  threading.vala  types.vala  utilities.vala
libfsobasics/tests/: .gitignore  .testlogger.ini  Makefile.am  testasync.vala  testasyncworker.vala  testbinbuilder.vala  testbinreader.vala  testinotifier.vala  testkobjectnotifier.vala  testlogger.vala  testnetlink.vala  testnetlinknotifier.vala  testoverlay.vala  testprocess.vala  testsmartkeyfile.vala  testthreading.vala  testutilities.vala
libfsobasics/vapi/: Makefile.am  libnl-2.0.vapi  libnl-3.0.vapi  linux.vapi  misc.vapi  morelinux.deps  morelinux.vapi  posixextra.vapi
libfsoframework/: ChangeLog  Makefile.am  README  configure.ac  fsoframework-2.0.pc.in
libfsoframework/fsobasics/: Makefile.am  fsobasics-2.0.pc.in  netlinknotifier.vala  netlinkutils.vala  object.vala  overlay.vala  smartkeyfile.vala  syncasync.vala
libfsoframework/fsoframework/: Makefile.am  alsa.vala  asyncworker.vala  common.vala  dbus.vala  fsoframework-2.0.deps  fsoframework-2.0.gir  fsoframework-2.0.vapi  inotifier.vala  interfaces.vala  kobjectnotifier.vala  logger.c  logger.h  logger.vala  netlinknotifier.vala  object.vala  overlay.vala  plugin.vala  process.vala  resource.vala  smartkeyfile.vala  subsystem.vala  syncasync.vala  transport.vala  utilities.vala
libfsoframework/fsoresource/: Makefile.am  dbusresource.vala
libfsoframework/fsosystem/: Makefile.am  fsosystem-2.0.deps  fsosystem-2.0.pc.in
libfsoresource/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  fsoresource-2.0.pc.in
libfsosystem/: ChangeLog  Makefile.am  README  configure.ac
libfsotransport/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  fsotransport-2.0.pc.in
libgsm0710mux/: .gitignore  ChangeLog  Makefile.am  Makefile.decl  README  TODO  configure.ac
misc-vapi/: .gitignore  ChangeLog  Makefile.am  configure.ac
(+1189 files in other folders)
